changed some images

--- a/css/style.css
+++ b/css/style.css
@@ -8499,3 +8499,8 @@ textarea.form-control {
 /*6. CUSTOM*/
 
 /*# sourceMappingURL=style.css.map */
+
+.sunglasses{
+  width: 350px;
+  height: 415px;
+}
